<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/ic_account_balance_wallet_24"
        android:title="@string/bot_nav_transaction_title" />

    <item
        android:id="@+id/reportFragment"
        android:icon="@drawable/ic_pie_chart_24"
        android:title="@string/bot_nav_report_title" />
    <item
        android:id="@+id/placeholder"
        android:title="" />
    <item
        android:id="@+id/planFragment"
        android:icon="@drawable/ic_plan_icon_24"
        android:title="@string/bot_nav_plan_title" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_person_24"
        android:title="@string/bot_nav_account_title" />
</menu>